Fix text overflow

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 } */
 
 .CodeMirror {
-  width: 98%;
+  width: 100%;
   height: 50vh !important;
   font-size: 1rem;
 }
@@ -59,7 +59,7 @@ body {
 }
 
 #output {
-  max-width: 90%;
+  max-width: calc(100% - 60px);
   word-wrap: break-word;
 }
 
@@ -80,9 +80,9 @@ body {
   visibility: hidden;
   position: fixed;
   left: 50%;
+  transform: translateX(-50%);
   bottom: 2em;
-  min-width: 250px;
-  margin-left: -125px;
+  min-width: 100px;
   padding: 16px;
   text-align: center;
   border-radius: 2px;
